<resources>
    <string name="aws_key">AKIAWZWUW3ENDL6R5M4E</string>
    <string name="aws_secret_key">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</string>
    <string name="app_name">Here2Dare</string>
    <string name="google_places_api_key">AIzaSyCWKZ7TiidAlVMKGTIlhZw3jorSZv-SoZY</string>
    <string name="facebook_app_id">2429733953933588</string>
    <string name="terms_and_conditions">By signing up and using this app, you agree to Here2Dare Inc. Terms and Conditions and Privacy Policy.</string>
    <string name="already_a_member">Already a member?</string>
    <string name="get_started">Get Started</string>
    <string name="login">Login</string>
    <string name="your_registered_phoneno_is">Your registered phone number</string>
    <string name="phone_number">Phone Number</string>
    <string name="or_you_could">Or you could…</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="welcome">Welcome</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="whats_your_name">What\'s your name?</string>
    <string name="first_name">First name</string>
    <string name="and_your_last_name">and your last name?</string>
    <string name="last_name">Last Name</string>
    <string name="your_country">Your country</string>
    <string name="your_agency_name">Your agency\'s name</string>
    <string name="email">Email</string>
    <string name="company_name">Company\s Name</string>
    <string name="new_password">New Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="enter_confirm_pass">Enter Confirm Password</string>
    <string name="pass_missmatch">Password doesn\'t match</string>
    <string name="pass_length_msg">Password should be minimum 6 characters</string>
    <string name="eg_john_email_com">eg. john@email.com</string>
    <string name="your_email">Your Email</string>
    <string name="we_need_your_phone_number_and_email_to_communicate_and_identify_you">We need your phone number and email to communicate and identify you.</string>
    <string name="thank_you_for_registering_with_h2d">You are now a member of the H2D Family!</string>
    <string name="you_can_verify_your_account">We encourage you to verify your identity and set-up payout details now, so you can start making offers as a traveler right away!</string>
    <string name="we_sent_you_a_code">We sent you a code to verify your number</string>
    <string name="code_sent_to">Code sent to</string>
    <string name="enter_code">Enter code</string>
    <string name="accountNumber">Account Number</string>
    <string name="didnt_received_the_code">Didn’t receive the code yet? Resend code</string>
    <string name="resend_code">Resend code</string>
    <string name="secure_your_account_with_password">Secure your account with password</string>
    <string name="show">Show</string>
    <string name="try_again_later">Please try again later</string>
    <string name="sww_error">Something went wrong. Please try again later</string>
    <string name="phone_verified_successfully">Phone number verified successfully!</string>
    <string name="okay">Ok</string>
    <string name="please_enter_phonenumber">Please enter phone number to continue</string>
    <string name="enter_a_valid_phone">Please enter a valid phone number.</string>
    <string name="invalide_code">You have entered an invalid verification code</string>
    <string name="error_in_verifying_phone">Error in verifying your phone number</string>
    <string name="network_error">Network error. Please check your internet connection.</string>
    <string name="please_enter_password">Please enter password to continue.</string>
    <string name="password_length_validation_msg">Password must be of atleast 6 characters.</string>
    <string name="please_enter_firstname">Please enter first name.</string>
    <string name="please_enter_email">Please enter your email address</string>
    <string name="email_validation_msg">Please enter a valid email address</string>
    <string name="please_enter_lastname">Please enter last name</string>
    <string name="hide">hide</string>
    <string name="please_enter_otp">Please enter verification code to continue</string>
    <string name="login_successfull">Logged in successfully!!!</string>
    <string name="already_registered_with_google">This phone number is already registered with Google account. Login with google to continue.</string>
    <string name="already_registered_with_facebook">This phone number is already registered with Facebook. Please login with facebook to continue.</string>
    <string name="user_not_registered">This phone number is not registered with Here2Dare. Please signup to continue.</string>
    <string name="unbale_to_connect_with_google">Unable to connect with Google. Please try again.</string>
    <string name="phone_number_already_exists">Este número de teléfono ya está registrado.</string>
    <string name="email_already_exists">Email you have entered is already registered.</string>
    <string name="code_sent_successfyully">Verification code sent successfully</string>
    <string name="title_home">Home</string>
    <string name="title_orders">Orders</string>
    <string name="title_chats">Chats</string>
    <string name="title_account">Account</string>
    <string name="back">Back</string>
    <string name="done">Done</string>
    <string name="location_on_message">Please enable location from settings</string>
    <string name="proceed">Proceed</string>
    <string name="dialog_confirm_remove">Are you sure you want to delete it?</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_remove">Delete</string>
    <string name="ok">Ok</string>
    <string name="continue_">Continue</string>
    <string name="cancel">Cancel</string>
    <string name="gotosettings">Go To Settings</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="choose_option">Choose option</string>
    <string name="my_orders">My Orders</string>
    <string name="requested">Requested</string>
    <string name="accepted">Accepted</string>
    <string name="accepted_caps">ACCEPTED</string>
    <string name="completed">Completed</string>
    <string name="completed_caps">COMPLETED</string>
    <string name="offer_made_caps">OFFER MADE</string>
    <string name="offers">offers</string>
    <string name="from">From</string>
    <string name="no_data_found">No orders found</string>
    <string name="reaching_by">Reaching by</string>
    <string name="please_add_atleast_one_image">Please add at least one picture of your item</string>
    <string name="please_select_delivery_type">Please select a service type.</string>
    <string name="please_enter_pickup_address">Please enter an origin country/city</string>
    <string name="please_enter_drop_off_address">Please enter a destination city</string>
    <string name="enter_pickup_time">Please enter the time your item should be delivered in</string>
    <string name="currency_sign">$</string>
    <string name="you_have_to_pay_atleast">You have to pay at least</string>
    <string name="for_the_transport"> for the product</string>
    <string name="view_edit_profile">View/Edit Profile</string>
    <string name="log_out">Log out</string>
    <string name="switch_to_shopper">switch to shopper</string>
    <string name="switch_to_driver">switch to traveler</string>
    <string name="logout_dialog_message">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="filters">Filters</string>
    <string name="make_an_offer">Make an offer</string>
    <string name="accept_offer">Accept offer</string>
    <string name="confirm">Confirm</string>
    <string name="accept_offer_confirmation">Are you sure you want to accept this offer? By clicking \'Confirm\' you agree to the delivery reward and date provided by the shopper and to H2D Terms and Conditions.</string>
    <string name="cancel_order_confirmation">Are you sure you want to cancel this order?</string>
    <string name="republish_order_confirmation">Are you sure you want to republish this order?</string>
    <string name="offer_accepted">Offer accepted!</string>
    <string name="you">You</string>
    <string name="accept">Accept</string>
    <string name="offer">Offer</string>
    <string name="please_enter_item_name">Please enter item name.</string>
    <string name="please_enter_item_web_url">Please enter item\'s  web URL</string>
    <string name="please_enter_item_price">Please enter item price .</string>
    <string name="please__enter_valid_item_quantity">Please enter valid item quantity</string>
    <string name="please_enter_valid_web_url">Please enter valid web url.</string>
    <string name="made_an_offer">made an offer</string>
    <string name="accepted_your_offer">accepted your offer</string>
    <string name="items">items</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="offers_made_empty_msg">You haven\'t made any offer</string>
    <string name="offers_accepted_empty_msg">You haven\'t accepted any request</string>
    <string name="offers_completed_empty_msg">You haven\'t completed any request</string>
    <string name="request_detail_driver">Request Detail Traveler</string>
    <string name="help">Help</string>
    <string name="call_driver">Call Traveler</string>
    <string name="contact_driver">Contact Traveler</string>
    <string name="view_order_details">View order details</string>
    <string name="edit">Edit</string>
    <string name="track_your_item">Track your item</string>
    <string name="goods_received">Goods received</string>
    <string name="pending">Pending</string>
    <string name="cancel_order">CANCEL ORDER</string>
    <string name="add_receiver_s_info">Add Receiver\'s Info</string>
    <string name="email_address">Email Address</string>
    <string name="submit">Submit</string>
    <string name="please_phone_phone_number">Please enter phone number</string>
    <string name="please_enter_receiver_name">Please enter receiver name .</string>
    <string name="settings">Settings</string>
    <string name="yesterday">Yesterday</string>
    <string name="nintynine_plus">99+</string>
    <string name="type_here">Type here</string>
    <string name="retry">Retry</string>
    <string name="sent_an_image">sent an image</string>
    <string name="today">Today</string>
    <string name="store">Store</string>
    <string name="delivery">Delivery</string>
    <string name="save_changes">Save changes</string>
    <string name="profile_updated">Profile updated successfully</string>
    <string name="chat_with_driver">Chat with traveler</string>
    <string name="i_could_not_find">I could not find the product</string>
    <string name="product_price_not_correct">The product price is not correct</string>
    <string name="shopper_not_responding">My shopper is not responding</string>
    <string name="delivery_place_issue">Delivery place issue</string>
    <string name="reset">RESET</string>
    <string name="price_range">Price Range</string>
    <string name="delivery_only">Delivery Only</string>
    <string name="pick_up_only">Pick Up + Delivery</string>
    <string name="shop_only">Shop + Delivery</string>
    <string name="apply">Apply</string>
    <string name="reject_order">Cancel order</string>
    <string name="reward_range">Reward Range</string>
    <string name="filter_by_date">Filter by Date</string>
    <string name="all">All</string>
    <string name="_5000">$5000</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
</resources>