<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/selector_home"
        android:title="@string/title_home" />

    <item
        android:id="@+id/nav_orders"
        android:icon="@drawable/selector_orders"
        android:title="@string/title_orders" />

    <item
        android:id="@+id/nav_chats"
        android:icon="@drawable/selector_chats"
        android:title="@string/title_chats" />

   <!-- <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification_leight"
        android:title="@string/title_notifications" />-->
    <item
        android:id="@+id/nav_account"
        android:icon="@drawable/selector_account"
        android:title="@string/title_account" />
</menu>
