<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:text="@string/cancel_order"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>
    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp">
        <RadioButton
            android:id="@+id/radio_not_find"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:text="@string/i_could_not_find"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radio_price_not_cotrrect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:text="@string/product_price_not_correct"
            android:textColor="@color/black"/>
        <RadioButton
            android:id="@+id/radio_shopper_not_responding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:text="@string/shopper_not_responding"
            android:textColor="@color/black"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:paddingLeft="12dp"
            android:singleLine="true"
            android:text="@string/delivery_place_issue"
            android:textColor="@color/black"/>
    </RadioGroup>
    <TextView
        android:id="@+id/tv_cancel_orders"
        style="@style/Base.Widget.AppCompat.Button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/shape_round_corner_green_bg"
        android:gravity="center"
        android:paddingEnd="16dp"
        android:paddingStart="20dp"
        android:text="@string/reject_order"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"/>
</LinearLayout>