<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/chooseOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/choose_option"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivChat"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseOption"
        android:paddingTop="12dp"
        app:srcCompat="@drawable/ic_chat" />

    <TextView
        android:id="@+id/tvChat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chooseOption"
        android:layout_toEndOf="@+id/ivChat"
        android:background="?attr/selectableItemBackground"
        android:drawableTint="@color/colorPrimary"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/chat_with_driver"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <ImageView
        android:id="@+id/ivCall"
        android:layout_width="42dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChat"
        android:padding="12dp"
        android:paddingTop="12dp"
        android:src="@drawable/ic_call_w"
        android:tint="@color/colorPrimary" />


    <TextView
        android:id="@+id/tvCall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvChat"
        android:layout_toEndOf="@+id/ivCall"
        android:background="?attr/selectableItemBackground"
        android:drawableTint="#00246b"
        android:gravity="center_vertical"
        android:padding="12dp"
        android:text="@string/call_driver"
        android:textColor="@color/black"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCall"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:textStyle="bold" />
</RelativeLayout>